sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:11: error: ';' expected but 'if' found.
			} if (p!=0) {
                          ^